--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 fastapi # web framework for building apis with python 
-uvicorn # server that runs fastapi applications
+uvicorn # workers on prodution server that runs fastapi applications
+gunicorn # production server for running python web applications
 python-multipart # for handling file uploads in fastapi
 requests # for making http requests
 httpx # for making async http requests
