--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,10 @@ python-dotenv # for loading environment variables from a .env file
 supabase # pyhton client for supabase 
 deepgram-sdk # sdk for interacting with deepgram api
 edge-tts
+groq
+gtts
+# openai-whisper
+# torch
+# torchvision
+# torchaudio
+# ffmpeg-python
