--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -3,7 +3,7 @@ name = "livekit-voice-agent"
 version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
-    "livekit-agents[openai,silero,turn-detector]~=1.3",
+    "livekit-agents[google,openai,silero,turn-detector]~=1.3",
     "livekit-plugins-azure>=1.3.12",
     "livekit-plugins-deepgram>=1.3.12",
     "livekit-plugins-google>=1.3.12",
